# pylot

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  data_gatherer.py  data_gatherer_chauffeur.py  detection_operator_runner.py  experiments.py  install.sh  lincoln.py  mpc_experiments.py  pylot.py  pylot2.py  requirements.txt  scenario_runner.py  setup.py
configs/: data_gatherer.conf  data_gatherer_autopilot.conf  data_gatherer_chauffeur.conf  data_gatherer_localization.conf  data_gatherer_localization_noise.conf  data_gatherer_w_localization_noise.conf  demo.conf  depth_estimation.conf  detection.conf  detection_decay_increments_20ms_max_400ms.conf  e2e.conf  frenet_optimal_trajectory_planner.conf  fusion.conf  ground_agent_e2e.conf  ground_agent_e2e_benchmark.conf  ground_detection_eval.conf  hybrid_astar_planner.conf  imu.conf  kalman_logger.conf  lane_detection.conf  lane_detection_data.conf  lincoln.conf  lincoln_frenet.conf  lincoln_perception.conf  lincoln_rrt.conf  lincoln_waypoints.conf  mpc.conf  mpc_agent.conf  object_accuracy.conf  obstacle_accuracy.conf  only_ground_agent.conf  perception.conf  perfect_detection.conf  perfect_detector.conf  perfect_lane_detection.conf  pid_agent_e2e.conf  prediction.conf  pylot_agent_e2e.conf  pylot_agent_e2e_benchmark.conf  replay.conf  (+8 more)
doc/: README.md  requirements-doc.txt
docker/: Dockerfile  Dockerfile-challenge.master  Dockerfile-challenge.ros  Dockerfile_carla_Ubuntu16.04  Dockerfile_carla_Ubuntu18.04  Dockerfile_erdos_carla_Ubuntu16.04  Dockerfile_erdos_carla_Ubuntu18.04  Dockerfile_pylot_Ubuntu16.04  Dockerfile_pylot_Ubuntu18.04  build_Ubuntu16.04_images.sh  build_Ubuntu18.04_images.sh  build_images.sh  docker_erdos.sh  ros_entrypoint.sh  run_container_on_linconln.sh
fast-rrt-star/: .gitignore  Main.py  README.md  commons.py  plotter.py  random_data_generator.py  requirements.txt  rrg.py
pylot/: component_creator.py  config.py  data_gatherer.py  flags.py  operator_creator.py  pylot.py  utils.py
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/: .gitignore  CMakeLists.txt  README.md  build.sh
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/FrenetOptimalTrajectory/: fot.py  fot_wrapper.py
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/scripts/: experiment.cpp
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/src/: constants.h  main.cpp  utils.h
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/src/CubicSpline/: CubicSpline1D.cpp  CubicSpline1D.h  CubicSpline2D.cpp  CubicSpline2D.h
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/src/FrenetOptimalTrajectory/: FrenetOptimalTrajectory.cpp  FrenetOptimalTrajectory.h  FrenetPath.cpp  FrenetPath.h  fot_wrapper.cpp
pylot/planning/frenet_optimal_trajectory/FrenetOptimalTrajectory/src/Polynomials/: QuarticPolynomial.cpp  QuarticPolynomial.h  QuinticPolynomial.cpp  QuinticPolynomial.h
scripts/: check_3d_2d_conversions.py  collect_data.sh  collect_sign_data.sh  compute_decay.py  convert_carla_to_coco.py  create_obj_detection_tf_records.py  explore_hd_map_api.py  gen_crops_from_obj_tracker_logs.py  get_dependencies.sh  get_lane_data.py  install-nvidia-docker.sh  replay.py  (+20 more)
(+348 files in other folders)
